# lazy-peon-rs

./: Cargo.toml  README.md
src/: backend.rs  generator.rs  keyboard.rs  lib.rs  main.rs  mouse.rs  types.rs
