[package]
name = "lazy-peon-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.26", features = ["derive"] }
enigo = "0.3.0"
mouse-rs = "0.4.2"
nalgebra = "0.33.2"
rand = "0.8.5"
tokio = { version = "1.43.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

